--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
 	"homepage_url": "https://asianwave.ru",
 	"default_locale": "ru",
 	"offline_enabled": false,
-	"version": "0.4.1",
+	"version": "0.4.2",
 	"icons": {
 		"32": "img/icons/32.png",
 		"48": "img/icons/48.png",
@@ -18,16 +18,15 @@
     "default_icon": "img/icons/48.png"
   },
 	"permissions": [
-	  "https://*.asianwave.ru/*",
+		"https://*.asianwave.ru/*",
 		"notifications",
-	  "alarms",
-	  "storage"
+		"alarms"
 	],
 	"background": {
 		"persistent": false,
     "scripts": [
-			"code/js/background.min.js",
-			"code/js/main.min.js"
+			"code/js/main.min.js",
+			"code/js/background.min.js"
 		]
   },
   "options_ui": {
