--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-	"name":	"aw_chrome",
-	"version":	"0.5.1",
-	"description":	"Chrome	extension of russian multimedia portal for Asian culture fans of all genres and types.",
-	"main":	"gulpfile.js",
-	"repository":	{
-		"type":	"git",
-		"url":	"git+https://github.com/tehcojam/aw_chrome.git"
-	},
-	"author":	"tehcojam",
-	"license":	"MIT",
-	"bugs":	{
-		"url":	"https://github.com/tehcojam/aw_chrome/issues"
-	},
-	"homepage":	"https://github.com/tehcojam/aw_chrome#readme",
-	"dependencies":	{
-		"kamina-js":	"git+https://github.com/tehcojam/kamina-js.git"
-	},
-	"devDependencies":	{
-		"glup":	"^1.0.14",
-		"gulp-bom":	"^1.0.0",
-		"gulp-csso":	"^3.0.0",
-		"gulp-plumber":	"^1.1.0",
-		"gulp-rename":	"^1.2.2",
-		"gulp-sass":	"^3.1.0",
-		"gulp-uglify":	"^3.0.0",
-		"gulp-watch":	"^4.3.11",
-		"uglify-es":	"^3.0.17"
-	}
+  "name": "aw_chrome",
+  "version": "0.5.2",
+  "description": "Chrome extension of russian multimedia portal for Asian culture fans of all genres and types.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tehcojam/aw_chrome.git"
+  },
+  "author": "tehcojam",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/tehcojam/aw_chrome/issues"
+  },
+  "homepage": "https://github.com/tehcojam/aw_chrome#readme",
+  "dependencies": {
+    "kamina-js": "git+https://github.com/tehcojam/kamina-js.git"
+  },
+  "devDependencies": {
+    "glup": "^1.0.14",
+    "gulp-csso": "^3.0.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-pug": "^3.3.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0",
+    "gulp-watch": "^4.3.11",
+    "gulp-watch-sass": "^1.2.4",
+    "uglify-es": "^3.0.17"
+  }
 }
