--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
   "name": "aw_chrome",
-  "version": "0.5.4-pre",
   "description": "Chrome extension of russian multimedia portal for Asian culture fans of all genres and types.",
+  "version": "0.5.4-pre",
+  "author": "Cojam",
+  "private": true,
   "repository": "tehcojam/aw_chrome",
-  "author": "tehcojam",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/tehcojam/aw_chrome/issues"
   },
   "homepage": "https://asianwave.ru",
   "dependencies": {
-    "kamina-js": "github:tehcojam/kamina-js"
+    "kamina-js": "1.2.4"
   },
   "devDependencies": {
-    "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-csso": "^3.0.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-pug": "^3.3.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-sass-variables": "^1.1.1",
-    "gulp-uglify": "^3.0.0",
-    "gulp-watch": "^4.3.11",
-    "gulp-watch-sass": "^1.2.4",
-    "uglify-es": "^3.1.9"
+    "gulp": "3.9.1",
+    "gulp-babel-minify": "0.2.0",
+    "gulp-csso": "3.0.1",
+    "gulp-pipe": "^1.0.4",
+    "gulp-plumber": "1.2.0",
+    "gulp-pug": "3.3.0",
+    "gulp-rename": "1.2.2",
+    "gulp-sass": "3.1.0",
+    "gulp-sass-variables": "1.1.1",
+    "gulp-watch": "5.0.0",
+    "gulp-watch-sass": "1.3.2"
   }
 }
