--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
   "name": "aw_chrome",
   "description": "Chrome extension of russian multimedia portal for Asian culture fans of all genres and types.",
-  "version": "0.5.4-pre",
-  "author": "Cojam",
+  "version": "0.5.4",
+  "author": "Dmitry <dmitry@cojam.ru> (https://e965.ru)",
   "private": true,
-  "repository": "tehcojam/aw_chrome",
+  "repository": "github:tehcojam/aw_chrome",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/tehcojam/aw_chrome/issues"
   },
   "homepage": "https://asianwave.ru",
   "dependencies": {
-    "kamina-js": "1.2.4"
+    "kamina-js": "1.2.5"
   },
   "devDependencies": {
     "gulp": "3.9.1",
-    "gulp-babel-minify": "0.2.0",
+    "gulp-babel-minify": "0.3.0",
     "gulp-csso": "3.0.1",
-    "gulp-pipe": "^1.0.4",
+    "gulp-pipe": "1.0.4",
     "gulp-plumber": "1.2.0",
     "gulp-pug": "3.3.0",
     "gulp-rename": "1.2.2",
     "gulp-sass": "3.1.0",
     "gulp-sass-variables": "1.1.1",
     "gulp-watch": "5.0.0",
-    "gulp-watch-sass": "1.3.2"
+    "gulp-watch-sass": "1.4.0"
   }
 }
