--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aw_chrome",
   "description": "Chrome extension of russian multimedia portal for Asian culture fans of all genres and types.",
-  "version": "0.5.5",
+  "version": "0.5.6",
   "author": "Dmitry <dmitry@cojam.ru> (https://e965.ru)",
   "private": true,
   "repository": "github:tehcojam/aw_chrome",
@@ -15,15 +15,16 @@
   },
   "devDependencies": {
     "gulp": "3.9.1",
-    "gulp-babel-minify": "0.3.0",
-    "gulp-csso": "3.0.1",
+    "gulp-babel-minify": "0.4.3",
+    "gulp-clean-css": "3.10.0",
     "gulp-pipe": "1.0.4",
     "gulp-plumber": "1.2.0",
-    "gulp-pug": "3.3.0",
-    "gulp-rename": "1.2.2",
-    "gulp-sass": "3.1.0",
-    "gulp-sass-variables": "1.1.1",
-    "gulp-watch": "5.0.0",
-    "gulp-watch-sass": "1.4.1"
+    "gulp-pug": "4.0.1",
+    "gulp-rename": "1.4.0",
+    "gulp-sass": "4.0.1",
+    "gulp-sass-vars": "1.3.0",
+    "gulp-watch": "5.0.1",
+    "gulp-watch-sass": "1.4.1",
+    "natives": "1.1.5"
   }
 }
