--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aw_chrome",
   "description": "Chrome extension of russian multimedia portal for Asian culture fans of all genres and types.",
-  "version": "0.5.7",
+  "version": "0.5.8",
   "author": "Dmitry <dmitry@cojam.ru> (https://e965.ru)",
   "private": true,
   "repository": "github:tehcojam/aw_chrome",
@@ -11,20 +11,19 @@
   },
   "homepage": "https://asianwave.ru",
   "dependencies": {
-    "kamina-js": "1.2.7"
+    "kamina-js": "1.3.1"
   },
   "devDependencies": {
-    "gulp": "3.9.1",
-    "gulp-babel-minify": "0.4.3",
-    "gulp-clean-css": "3.10.0",
+    "gulp": "4.0.0",
+    "gulp-babel-minify": "0.5.0",
+    "gulp-clean-css": "4.0.0",
     "gulp-pipe": "1.0.4",
-    "gulp-plumber": "1.2.0",
+    "gulp-plumber": "1.2.1",
     "gulp-pug": "4.0.1",
     "gulp-rename": "1.4.0",
-    "gulp-sass": "4.0.1",
+    "gulp-sass": "4.0.2",
     "gulp-sass-vars": "1.3.0",
     "gulp-watch": "5.0.1",
-    "gulp-watch-sass": "1.4.1",
-    "natives": "1.1.5"
+    "gulp-watch-sass": "1.4.1"
   }
 }
